--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,45 @@
-name: Docker Build and Push - Art Gallery Project
+version: "3.9"
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
+services:
+  mysqldb:
+    image: mysql:8
+    container_name: mysql-db
+    environment:
+      MYSQL_ROOT_PASSWORD: docker
+      MYSQL_DATABASE: klustudentdb
+    ports:
+      - "3307:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+    networks:
+      - springboot-mysql-net
 
-jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
+  backend:
+    image: deekshith1809artgallery-backend:latest   # ✅ match Docker Hub repo
+    container_name: springboot
+    ports:
+      - "2025:2000"
+      
+    depends_on:
+      - mysqldb
+    restart: on-failure
+    networks:
+      - springboot-mysql-net
 
-    steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4
+  frontend:
+    image: deekshith1809/artgallery-frontend:latest  # ✅ match Docker Hub repo
+    container_name: react
+    ports:
+      - "3000:80"
+    depends_on:
+      - backend
+    restart: on-failure
+    networks:
+      - springboot-mysql-net
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+volumes:
+  mysql_data:
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push backend image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./SpringBootProjectBackend
-          file: ./SpringBootProjectBackend/backend.Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/artgallery-backend:latest
-
-      - name: Build and push frontend image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./artgalleryproj-fsad
-          file: ./artgalleryproj-fsad/frontend.Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/artgallery-frontend:latest
+networks:
+  springboot-mysql-net:
+    driver: bridge
