--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,10 @@ services:
       - springboot-mysql-net
 
   backend:
-    image: deekshith1809/artgallery-backend:latest   # ✅ match Docker Hub repo
+    image: deekshith1809/artgallery-backend:latest
     container_name: springboot
     ports:
       - "2025:2000"
-      
     depends_on:
       - mysqldb
     restart: on-failure
@@ -27,7 +26,7 @@ services:
       - springboot-mysql-net
 
   frontend:
-    image: deekshith1809/artgallery-frontend:latest  # ✅ match Docker Hub repo
+    image: deekshith1809/artgallery-frontend:latest
     container_name: react
     ports:
       - "3000:80"
